# gamelike

./: CMakeLists.txt  CMakeUserPresets.exemplar.json  CONTRIBUTING.md  Makefile  NOTICE  README.md
source/: CMakeLists.txt  README.md  app.hxx  main.cxx
source/app/: README.md
source/engine/: README.md
source/gl_/: README.md
source/gl_/craft/: README.md
source/gl_/drage/: README.md
source/gl_/exile/: README.md
source/gl_/magic/: README.md
source/gl_/might/: README.md
source/gl_/risen/: README.md
source/gl_/rogue/: README.md
source/gl_/souls/: README.md
