cmake_minimum_required( VERSION 3.20...3.27 )
project( gamelike VERSION 0.0.0 LANGUAGES CXX )
set( APP ${PROJECT_NAME} )
# private configuration under source directory
add_subdirectory( source )

# GNU Affero General Public License v3.0 or later
# NO WARRANTY OF ANY KIND more details at <https://www.gnu.org/licenses/>
# SPDX-License-Identifier: AGPL-3.0-or-later
# app: `gamelike` Resemble Role Playing Games
# Ⓒ Copyright (C) 2026 Oleg'Ease'Kharchuk ᦒ
